# agent-worx

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_cert_events.py
docs/: arch_reference.docx
infra/postgres/: init.sql
speckit/: README.md
speckit/phase-0-foundations/: PHASE.md  T0.1-temporal.md  T0.2-postgres.md  T0.3-redis.md  T0.4-qdrant.md  T0.5-kuzu.md  T0.6-schema-kuzu.md  T0.7-schema-postgres.md  T0.8-schema-redis.md
speckit/phase-1-apprentice/: PHASE.md  T1.1-agent-type-registry.md  T1.10-contract-validator.md  T1.11-cert1-gate.md  T1.2-gap-detector.md  T1.3-question-generator.md  T1.4-answer-processor.md  T1.5-graph-writer.md  T1.6-readiness-scorer.md  T1.7-llm-team-proposal.md  T1.8-proposal-review-api.md  T1.9-simulation-session.md
speckit/phase-2-journeyman/: PHASE.md  T2.1-langgraph-state-graph.md
speckit/phase-3-work/: PHASE.md  T3.6-circuit-breaker.md
speckit/shared/: API_CONTRACTS.md  DATA_SCHEMAS.md  DEPENDENCIES.md  INVARIANTS.md  PROJECT_STRUCTURE.md
src/: __init__.py
src/api/: main.py
src/apprentice/: __init__.py  answer_processor.py  cert1_service.py  gap_detector.py  graph_writer.py  proposal_engine.py  proposal_review_service.py  question_generator.py  readiness_scorer.py
src/core/: __init__.py  agent_type_service.py  enums.py  exceptions.py  models.py  redis_keys.py
src/infra/: kuzu_client.py  postgres_client.py  qdrant_client.py  redis_client.py
src/temporal/: __init__.py  config.py  worker.py  (+1 more)
(+23 files in other folders)
