[project]
name = "agent-worx"
version = "0.1.0"
requires-python = "==3.12.*"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "TID251"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"langgraph.checkpoint.sqlite".msg = "Use AsyncPostgresSaver; SqliteSaver is forbidden by invariant I4."
