[project]
name = "agent-worx"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "langgraph==1.0.0",
    "langchain-core==0.3.*",
    "langsmith==0.3.*",
    "temporalio==1.7.*",
    "kuzu==0.7.*",
    "qdrant-client==1.12.*",
    "asyncpg==0.30.*",
    "psycopg==3.2.*",
    "redis==5.2.*",
    "fastapi==0.115.*",
    "uvicorn[standard]==0.32.*",
    "pydantic==2.10.*",
    "anthropic==0.40.*",
    "openai==1.57.*",
    "spacy==3.8.*",
    "opentelemetry-sdk==1.29.*",
    "opentelemetry-exporter-prometheus==0.50b0",
    "prometheus-client==0.21.*",
    "alembic==1.14.*",
    "sqlalchemy==2.0.*",
]

[dependency-groups]
dev = [
    "pytest==8.3.*",
    "pytest-asyncio==0.24.*",
    "httpx==0.28.*",
    "ruff==0.8.*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "TID251"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"langgraph.checkpoint.sqlite".msg = "Use AsyncPostgresSaver; SqliteSaver is forbidden by invariant I4."
